[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/Imports/World/256x256/Dirt/Dirt_02-256x256.png" type="Texture" id=1]
[ext_resource path="res://assets/Imports/World/FontsAndButtons/you_died_spritemap.png" type="Texture" id=2]
[ext_resource path="res://src/Environment/DeathScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/Imports/World/FontsAndButtons/ExitClick.png" type="Texture" id=4]
[ext_resource path="res://assets/Imports/World/FontsAndButtons/ExitDefault.png" type="Texture" id=5]
[ext_resource path="res://assets/Imports/World/FontsAndButtons/RetryClick.png" type="Texture" id=6]
[ext_resource path="res://assets/Imports/World/FontsAndButtons/RetryDefault.png" type="Texture" id=7]
[ext_resource path="res://assets/Imports/World/FontsAndButtons/RetryHover.png" type="Texture" id=8]
[ext_resource path="res://assets/Imports/World/FontsAndButtons/ExitHover.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 2560, 0, 256, 144 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 144 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 144 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 256, 144 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 1024, 0, 256, 144 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 1280, 0, 256, 144 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 1536, 0, 256, 144 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 1792, 0, 256, 144 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 2048, 0, 256, 144 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 2304, 0, 256, 144 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 1 ), SubResource( 2 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 6 ), SubResource( 6 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[node name="DeathScreen" type="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
position = Vector2( 320, 180 )
scale = Vector2( 2.5, 1.40625 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 325, 128 )
frames = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ExitToMenu" type="TextureButton" parent="."]
visible = false
modulate = Color( 0.678431, 0.662745, 0.662745, 1 )
anchor_left = 0.288
anchor_top = 0.601
anchor_right = 0.288
anchor_bottom = 0.601
margin_right = 100.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 9 )

[node name="Retry" type="TextureButton" parent="."]
visible = false
modulate = Color( 0.678431, 0.662745, 0.662745, 1 )
anchor_left = 0.556
anchor_top = 0.601
anchor_right = 0.566
anchor_bottom = 0.601
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 8 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="ExitToMenu" to="." method="_on_ExitToMenu_pressed"]
[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
